@@ -18,29 +18,27 @@
  */
 package org.georchestra.console.integration;
 
-import static org.junit.Assert.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 
 import java.io.IOException;
+import java.lang.reflect.Method;
 import java.net.URISyntaxException;
+import java.nio.file.Path;
 import java.text.SimpleDateFormat;
-import java.util.Calendar;
-import java.util.GregorianCalendar;
-import java.util.HashSet;
-import java.util.Set;
+import java.util.*;
 
 import org.apache.commons.logging.LogFactory;
 import org.apache.log4j.Logger;
-import org.junit.Rule;
-import org.junit.rules.ExternalResource;
-import org.junit.rules.TestName;
-import org.junit.runner.Description;
-import org.junit.runners.model.Statement;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.TestInfo;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.ldap.core.LdapTemplate;
 import org.springframework.stereotype.Service;
+import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.RequestBuilder;
 import org.springframework.test.web.servlet.ResultActions;
@@ -72,7 +70,7 @@ import org.springframework.web.context.WebApplicationContext;
  * </code>
  * </pre>
  */
-public @Service class IntegrationTestSupport extends ExternalResource {
+public @Service class IntegrationTestSupport {
     private static Logger LOGGER = Logger.getLogger(IntegrationTestSupport.class);
 
     private @Autowired LdapTemplate ldapTemplate;
@@ -83,7 +81,7 @@ public @Service class IntegrationTestSupport extends ExternalResource {
     private @Value("${pgsqlUser}") String psqlUser;
     private @Value("${pgsqlPassword}") String psqlPassword;
 
-    private TestName testName = new TestName();
+    private String testName;
 
     private Set<String> createdUsers;
 
@@ -92,21 +90,31 @@ public @Service class IntegrationTestSupport extends ExternalResource {
 
     private MockMvc mockMvc;
 
-    public @Override Statement apply(Statement base, Description description) {
-        testName.apply(base, description);
-        return super.apply(base, description);
+    private void ensureInitialized() {
+        if (this.createdUsers == null) {
+            this.createdUsers = new HashSet<>();
+        }
+        if (this.mockMvc == null) {
+            assertNotNull(ldapTemplate.lookup("ou=users"));
+            this.mockMvc = MockMvcBuilders.webAppContextSetup(this.wac).build();
+        }
     }
 
-    public @Override void before() {
+    @BeforeEach
+    public void setup(TestInfo testInfo) {
+        Optional<Method> testMethod = testInfo.getTestMethod();
+        if (testMethod.isPresent()) {
+            this.testName = testMethod.get().getName();
+        }
         this.createdUsers = new HashSet<>();
-        LOGGER.debug(String.format("############# %s: pgsqlPort: %s, ldapPort: %s\n", testName.getMethodName(),
-                psqlPort, ldapPort));
+        LOGGER.debug(String.format("############# %s: pgsqlPort: %s, ldapPort: %s\n", testName, psqlPort, ldapPort));
         // pre-flight sanity check
         assertNotNull(ldapTemplate.lookup("ou=users"));
         this.mockMvc = MockMvcBuilders.webAppContextSetup(this.wac).build();
     }
 
-    public @Override void after() {
+    @AfterEach
+    public void cleanup() {
         for (String user : new HashSet<>(createdUsers)) {
             try {
                 deleteUser(user);
@@ -133,21 +141,22 @@ public @Service class IntegrationTestSupport extends ExternalResource {
     }
 
     public ResultActions perform(RequestBuilder requestBuilder) throws Exception {
+        ensureInitialized();
         return mockMvc.perform(requestBuilder);
     }
 
     public String testName() {
-        return testName.getMethodName();
+        return testName;
     }
 
     public String readResourceToString(String name) throws URISyntaxException, IOException {
         java.net.URL url = this.getClass().getResource(name);
-        java.nio.file.Path resPath = java.nio.file.Paths.get(url.toURI());
+        Path resPath = Path.of(url.toURI());
         return new String(java.nio.file.Files.readAllBytes(resPath), "UTF8");
     }
 
     public ResultActions createUser(String userName) throws Exception {
-        ResultActions perform = perform(post("/private/users")
+        ResultActions perform = perform(post("/private/users").contentType(MediaType.APPLICATION_JSON)
                 .content(readResourceToString("/testData/createUserPayload.json").replace("{uuid}", userName)));
         this.createdUsers.add(userName);
         return perform;
@@ -161,7 +170,7 @@ public @Service class IntegrationTestSupport extends ExternalResource {
             date.add(Calendar.YEAR, 10);
         }
         String dateAsString = new SimpleDateFormat("yyyy-MM-dd").format(date.getTime());
-        return perform(post("/private/users")
+        return perform(post("/private/users").contentType(MediaType.APPLICATION_JSON)
                 .content(readResourceToString("/testData/createUserPayload.json").replace("{uuid}", userName)
                         .replaceAll("\"shadowExpire\": null,", String.format("\"shadowExpire\": %s,", dateAsString))));
     }
